Correct vertical align of the browser container.

--- a/app/css/style.sass
+++ b/app/css/style.sass
@@ -55,7 +55,6 @@ body
 	--font-color-hight: #333
 	--font-color-low: #666
 	--main-color: #a00c3d
-	align-items: center
 	background-color: var(--bg-color)
 	box-sizing: border-box
 	color: var(--font-color-hight)
